intern/cycles/kernel/kernel_compat_opencl.h
@@ -43,6 +43,7 @@
 #define ccl_local __local
 #define ccl_local_param __local
 #define ccl_private __private
+#define ccl_loop_no_unroll __attribute__((opencl_unroll_hint(1)))
 #define ccl_restrict restrict
 #define ccl_ref
 #define ccl_align(n) __attribute__((aligned(n)))
